NO-JIRA | feat: Remove add vm to a running inspection
This commit removes the ability to add vms to an already running
inspection. This is brings almost no value but a lot of complexity.
The current UX design does not support such feature.
